--- a/app/src/main/res/layout/custom_item_study_find.xml
+++ b/app/src/main/res/layout/custom_item_study_find.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_find"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="100dp"
     android:background="#ffffff"
     android:orientation="horizontal">
 
     <View
+        android:id="@+id/divider2"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -20,6 +22,7 @@
         android:orientation="vertical">
 
         <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -33,12 +36,13 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ll_find_study_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="horizontal">
@@ -47,40 +51,30 @@
                         android:id="@+id/tv_study_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
+                        android:layout_weight="2"
                         android:text="스터디 이름" />
 
                     <TextView
                         android:id="@+id/tv_study_member"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="4"
+                        android:layout_weight="3"
                         android:text="스터디 인원" />
 
                 </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_weight="9"
                     android:visibility="visible"
                     app:srcCompat="@drawable/ic_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:background="@android:color/transparent"
-                    android:contentDescription="관심 스터디 등록"
-                    app:srcCompat="@drawable/ic_heart"
-                    tools:ignore="TouchTargetSizeCheck" />
 
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
@@ -132,7 +126,7 @@
                 android:id="@+id/et_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="7dp"
                 android:ems="1"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
@@ -143,6 +137,7 @@
         </LinearLayout>
 
         <View
+            android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -151,6 +146,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/divider4"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
