--- a/app/src/main/res/layout/custom_item_study_joined.xml
+++ b/app/src/main/res/layout/custom_item_study_joined.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_joined"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:background="#ffffff"
     android:orientation="horizontal">
 
     <View
+        android:id="@+id/divider2"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -19,6 +21,7 @@
         android:orientation="vertical">
 
         <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -32,6 +35,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ll_joined_study_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -53,18 +57,11 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_joined_tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_joined_tag0"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
 
                 <TextView
                     android:id="@+id/tv_joined_tag1"
@@ -98,11 +95,20 @@
                     android:text="#tag1"
                     android:textColor="#0000ff" />
 
+                <TextView
+                    android:id="@+id/tv_joined_tag5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="#tag1"
+                    android:textColor="#0000ff" />
+
             </LinearLayout>
 
         </LinearLayout>
 
         <View
+            android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_weight="1"
@@ -111,6 +117,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/divider4"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
