--- a/app/src/main/res/layout/fragment_study_main.xml
+++ b/app/src/main/res/layout/fragment_study_main.xml
@@ -1,95 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:baselineAligned="false"
+            android:gravity="center"
+            android:text="사용자 님이 가입한 스터디"
+            android:textSize="20dp" />
+
+        <View
+            android:id="@+id/div_head"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_marginTop="5dp"
+            android:background="#cdcdcd" />
+
+        <ScrollView
+            android:id="@+id/scv_studies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:fillViewport="true">
+
+            <ListView
+                android:id="@+id/lv_studies"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </ScrollView>
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/btn_find_study"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginEnd="-10dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="스터디 찾기"
+            android:padding="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/btn_make_study"
+            app:layout_constraintEnd_toEndOf="@+id/btn_make_study"
+            app:srcCompat="@drawable/ic_find" />
 
-            <TextView
-                android:id="@+id/tv_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:text="사용자 님이 가입한 스터디"
-                android:textSize="20dp" />
+        <ImageButton
+            android:id="@+id/btn_make_study"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="20dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="스터디 추가"
+            android:padding="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/btn_additional_func"
+            app:layout_constraintEnd_toEndOf="@+id/btn_additional_func"
+            app:srcCompat="@drawable/ic_plus" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginTop="5dp"
-                android:background="#cdcdcd" />
+        <ImageButton
+            android:id="@+id/btn_additional_func"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="40dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="스터디 찾기"
+            android:padding="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_additional_function_upper" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ListView
-                android:id="@+id/lv_study_joined"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"/>
-
-
-        </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageButton
-                android:id="@+id/btn_find_study"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginEnd="-5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="스터디 찾기"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:visibility="visible"
-                app:layout_constraintBottom_toTopOf="@+id/btn_make_study_make"
-                app:layout_constraintEnd_toEndOf="@+id/btn_make_study_make"
-                app:srcCompat="@drawable/ic_find" />
-
-            <ImageButton
-                android:id="@+id/btn_make_study_make"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="20dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="스터디 추가"
-                android:padding="0dp"
-                android:visibility="visible"
-                app:layout_constraintBottom_toTopOf="@+id/btn_additional_func"
-                app:layout_constraintEnd_toEndOf="@+id/btn_additional_func"
-                app:srcCompat="@drawable/btn_plus" />
-
-            <ImageButton
-                android:id="@+id/btn_additional_func"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginBottom="40dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="스터디 찾기"
-                android:padding="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/additional_function_upper" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </FrameLayout>
-
-</LinearLayout>
+</FrameLayout>
