--- a/app/src/main/res/layout/popup_study_join_closed_study.xml
+++ b/app/src/main/res/layout/popup_study_join_closed_study.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <View
+        android:id="@+id/divider5"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -20,6 +21,7 @@
         android:orientation="vertical">
 
         <View
+            android:id="@+id/divider7"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000000" />
@@ -30,7 +32,7 @@
             android:layout_weight="8">
 
             <ImageButton
-                android:id="@+id/btn_join_study_cancel"
+                android:id="@+id/imageButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@android:color/transparent"
@@ -40,6 +42,7 @@
                 app:srcCompat="@android:drawable/btn_dialog" />
 
             <EditText
+                android:id="@+id/editTextTextMultiLine"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="23dp"
@@ -61,11 +64,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/btn_join_study_with_code"
-                app:layout_constraintEnd_toEndOf="@id/btn_join_study_with_code"
-                app:layout_constraintStart_toStartOf="@+id/btn_join_study_with_code">
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintEnd_toEndOf="@id/button"
+                app:layout_constraintStart_toStartOf="@+id/button">
 
                 <View
+                    android:id="@+id/divider9"
                     android:layout_width="3dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -78,6 +82,7 @@
                     android:orientation="vertical">
 
                     <View
+                        android:id="@+id/divider10"
                         android:layout_width="match_parent"
                         android:layout_height="3dp"
                         android:background="?android:attr/listDivider" />
@@ -89,7 +94,7 @@
                         android:orientation="horizontal">
 
                         <EditText
-                            android:id="@+id/et_join_study_password"
+                            android:id="@+id/editTextTextPassword"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -99,7 +104,7 @@
                             tools:ignore="TouchTargetSizeCheck" />
 
                         <ImageButton
-                            android:id="@+id/btn_join_study_show_code"
+                            android:id="@+id/imageButton2"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_weight="1"
@@ -109,12 +114,14 @@
                     </LinearLayout>
 
                     <View
+                        android:id="@+id/divider11"
                         android:layout_width="match_parent"
                         android:layout_height="3dp"
                         android:background="?android:attr/listDivider" />
                 </LinearLayout>
 
                 <View
+                    android:id="@+id/divider12"
                     android:layout_width="3dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -123,11 +130,11 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_join_study_with_code"
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="80dp"
-                android:text="입장하기"
+                android:text="Button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -135,6 +142,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
+            android:id="@+id/divider8"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000000" />
@@ -142,6 +150,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/divider6"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
