--- a/app/src/main/res/layout/popup_study_join_open_study.xml
+++ b/app/src/main/res/layout/popup_study_join_open_study.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <View
+        android:id="@+id/divider5"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -20,6 +21,7 @@
         android:orientation="vertical">
 
         <View
+            android:id="@+id/divider7"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000000" />
@@ -30,7 +32,7 @@
             android:layout_weight="8">
 
             <ImageButton
-                android:id="@+id/btn_join_study_cancel"
+                android:id="@+id/imageButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@android:color/transparent"
@@ -43,7 +45,7 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="스터디에 참여하시겠습니까?"
+                android:text="스터디A에 참여하시겠습니까?"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,33 +54,34 @@
                 app:layout_constraintVertical_bias="0.357" />
 
             <Button
-                android:id="@+id/btn_join_open_study"
+                android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="36dp"
                 android:contentDescription="yes button"
                 android:text="네"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/btn_join_open_study_no"
+                app:layout_constraintEnd_toStartOf="@+id/button3"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 app:layout_constraintVertical_bias="0.331" />
 
             <Button
-                android:id="@+id/btn_join_open_study_no"
+                android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="no button"
                 android:text="아니오"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/textView2"
-                app:layout_constraintStart_toEndOf="@+id/btn_join_open_study"
+                app:layout_constraintStart_toEndOf="@+id/button2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 app:layout_constraintVertical_bias="0.331" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
+            android:id="@+id/divider8"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000000" />
@@ -86,6 +89,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/divider6"
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
